<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100">
    <TextView
        android:layout_marginTop="16dp"
        android:text="@string/judull"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>
    <ImageView
        android:id="@+id/foto_detil"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="70"
        android:layout_margin="16dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/nama_detil_dosen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/nama"
        android:textSize="15sp"
        android:textColor="#000"
        android:layout_gravity="center"/>
    <TextView
        android:id="@+id/kompetensi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Kompetensi"
        android:textSize="15sp"
        android:textColor="#000"
        android:layout_gravity="center"/>
    <TextView
        android:id="@+id/nip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/nip"
        android:textSize="15sp"
        android:textColor="#000"
        android:layout_gravity="center"/>
    <TextView
        android:id="@+id/namaMk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/nama_matakuliah"
        android:textSize="15sp"
        android:textColor="#000"
        android:layout_gravity="center"/>
    <TextView
        android:id="@+id/ruang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/ruang_kelas"
        android:textSize="15sp"
        android:textColor="#000"
        android:layout_gravity="center"/>
</LinearLayout>