<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="20dp"
    android:background="@color/warnalatarAppTable">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:text="Halaman Login"
            android:textColor="@color/warnaTeksAppTable"
            android:textSize="35sp"
            android:textStyle="bold"/>
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"

            android:text="@string/username"
            android:textColor="@color/warnaTeksAppTable"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/edtusername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:width="200dp"
            android:textSize="20sp"/>
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_column="1"
            android:textColor="@color/warnaTeksAppTable"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/edtpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:width="200dp"
            android:textSize="20sp"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">
        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/warnaTeksAppTable"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_column="1"
            android:text="@string/tombol"
            app:cornerRadius="0dp"/>
    </TableRow>
</TableLayout>



